Fix navbar alignment

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -40,14 +40,6 @@ body {
 }
 
 @mixin link-hover {
-  @media screen and (prefers-reduced-motion: no-preference) {
-    transition: 250ms cubic-bezier(0.75, 0.46, 0.52, 0.85);
-  }
-
-  @media screen and (prefers-reduced-motion) {
-    transition: none;
-  }
-
   &:hover {
     background-color: var(--color-primary);
     color: var(--color-accent);
