--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -13,19 +13,13 @@
 }
 
 .navbar__links {
+  align-items: center;
   display: flex;
-
-  :last-child {
-    margin-left: 5%;
-
-    @media screen and (min-width: 450px) {
-      margin-left: 10%;
-    }
-  }
 }
 
 .navbar__link {
   font-size: 1.5rem;
+  margin-left: 1rem;
   padding: 0.5rem 1rem;
 
   @include link-hover;
